# comfyui-too-xmp-metadata

./: README.md  __init__.py  pyproject.toml
py/: exiftool_manager.py  read_xmp_metadata.py  write_optimized_xmp_metadata_v2.py  write_xmp_metadata.py  write_xmp_metadata_lossless.py  write_xmp_tensor.py
web/: index.js
web/js/: appearance.js
